== 0.1.3 2009-09-03

This release improves Java annotations and build scripts. Nothing major, but worth an upgrade!
Make sure you upgrade the cucumber gem to 0.3.99.

=== New features
* Added new @Pending annotation that can be used as a substitute for Ruby-Cucumber's #pending method. (Aslak Hellesøy)

=== Changed features
* Gem dependencies in Maven no longer use the form gem:version:source. rubyforge, github and gemcutter are always used. (Darrin Holst, Aslak Hellesøy)

=== Bugfixes
* undefined method `jlength' (NoMethodError) for ambiguous matches with --guess. Requires Cucumber 0.3.99. (Aslak Hellesøy)
* The @Before annotation of a superclass has no effect in a subclass. (Works now if superclass is abstract) (Aslak Hellesøy)
* @Before tag should have optional scenario parameter (#11 Aslak Hellesøy, Henning Jensen)
* Fixed broken Ant script for Groovy example. (Aslak Hellesøy)

== 0.1.2 2009-08-25

Bugfix release. This release requires Cucumber 0.3.98.

=== Bugfixes
* Backtrace filtering is working again. (Aslak Hellesøy)
* Maven plugin resolve test dependencies so test scoped jars are included on the classpath (#9 Darrin Holst)
* Allow for PyStrings by converting string type objects to strings instead of casting (#10 Darrin Holst)

== 0.1.1 2009-08-23

This release is just an update to comply with API changes in Cucumber 0.3.97

== 0.1.0 2009-08-17

This release is almost a complete rewrite of Cuke4Duke's internals. This is to take advantage
of Cucumber 0.3.96' new plugin API for language add-ons like Cuke4Duke. (The plan is to use the
same plugin API for a .NET equivalent of Cuke4Duke).

Check out the new Groovy DSL! It's almost identical to the native Ruby DSL.

This means that your existing Cuke4Duke project will probably break. If you're using Pure Java
Step Definitions, you no longer have to register them in support/env.rb. Instead you have to
use --require. Choosing between PicoContainer or Spring is done with the -Dcuke4duke.objectFactory
JVM argument.
